# SparkFlowFX

./: .gitignore  CMakeLists.txt  README.md
src/App/: CMakeLists.txt  main.cpp
src/App/UI/: mainwindow.cpp  mainwindow.ui
src/Core/: CMakeLists.txt
src/app/: CMakeLists.txt
src/io/: CMakeLists.txt
src/render/: CMakeLists.txt
src/simulator/: CMakeLists.txt
